src/test/ui/consts/const-eval/issue-49296.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/issue-49296.rs:19:16
   |
LL | const X: u64 = *wat(42);
   |                ^^^^^^^^ pointer to alloc1 was dereferenced after this allocation got freed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
